# voxel-factory-game

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt
src/: arena.c  arena.h  main.c
